# hyphal-network-simulation

./: CMakeLists.txt  Makefile  README.md  notes  simulation
documentation/: Doxyfile
src/: CMakeLists.txt  Example.cpp  geometryUtil.hpp  main.cpp  myApp.cpp  myApp.hpp  testRender.cpp  testRender.hpp  testRender_lines.cpp  testRender_lines.hpp
src/imgui/: CMakeLists.txt  Makefile  Makefile.emscripten  app  imgui.ini  main.cpp  testRender.cpp  testRender.hpp
src/imgui/web/: index.js  index.wasm
src/include/: Example.hpp
testing/: ExampleTest.cpp  example1.cpp  example2.cpp  example3.cpp
